Fixed some over-spilling issues

--- a/interface.css
+++ b/interface.css
@@ -211,31 +211,15 @@ button {
 }
 #quest-inner-container {
   text-align: center;
-  border: solid black 1px;
-  width: 90%;
+  width: 70%;
   height: 100%;
 }
 #monarch-outer-container {
   display: none;
   width: 100%;
-  height: 40%;
+  text-align: center;
 }
 
 #monarch-outer-container h1 {
   margin-top: 0;
-}
-
-#monarch-inner-container {
-  width: 90%;
-  height: 50%;
-}
-#Succ0{
-
-float:left;
-width:49%
-}
-#Succ1{
-
-float:right;
-width:49%
 }
